--- a/themes/index.html
+++ b/themes/index.html
@@ -25,34 +25,17 @@
 <body>
 <header>
     <div class="container">
-        <div class="c7n-logo"><a href="/themes/home.php">
+        <div class="c7n-logo"><a href="/">
             <img src="/themes/images/logo/logo_white_small.png" /> </a></div>
         <nav id="clx-dropdown-navigation">
             <ul>
                 <li class="level-1">
-                    <a class="level-1" href="/application/ShoppingQueen/View/overview_view.php" target="_self">Shoppinglists</a>
-                    <div class="c7n-icon" onclick="location.href='application/ShoppingQueen/View/overview_view.php'">
-                        <div class="shadow"><img class="fa" src="/themes/images/icons/Orion_royal.png"></div>
+                    <a class="level-1" href="/application/ShoppingQueen/Controller/ShoppinglistController.php" target="_self">Shoppinglists</a>
+                    <div class="c7n-icon" onclick="location.href='/application/ShoppingQueen/Controller/ShoppinglistController.php'">
+                        <div class="shadow"><img class="fa" src="/themes/images/icons/Orion_shopping-basket.png"></div>
                     </div>
                 </li>
-                <li class="level-1">
-                    <a class="level-1" href="/core/Access/View/login_view.php" target="_self">Login</a>
-                    <div class="c7n-icon" onclick="location.href='/core/Access/Controller/UserController.php'">
-                        <div class="shadow"><img class="fa" src="/themes/images/icons/Orion_back-arrow.png"></div>
-                    </div>
-                </li>
-                <li class="level-1">
-                    <a class="level-1" href="/core/Access/View/login_view.php" target="_self">Logout</a>
-                    <div class="c7n-icon" onclick="location.href='/core/Access/View/login_view.php'">
-                        <div class="shadow"><img class="fa" src="/themes/images/icons/Orion_back-arrow.png"></div>
-                    </div>
-                </li>
-                <li class="level-1">
-                    <a class="level-1" href="/core/Access/View/login_view.php" target="_self">Register</a>
-                    <div class="c7n-icon" onclick="location.href='/core/Access/View/register_view.php'">
-                        <div class="shadow"><img class="fa" src="/themes/images/icons/Orion_add-user.png"></div>
-                    </div>
-                </li>
+                {HEADER_HTML}
             </ul>
         </nav>
     </div>
