fix(project): programm + style and Home (NO-TKT)

--- a/themes/header_member.html
+++ b/themes/header_member.html
@@ -1,12 +1,12 @@
 <li class="level-1">
-    <a class="level-1" href="/application/ShoppingQueen/Controller/ProductController.php" target="_self">Products</a>
+    <a class="level-1" href="?link=products" target="_self">Products</a>
     <div class="c7n-icon" onclick="location.href='?link=products'">
         <div class="shadow"><img class="fa" src="/themes/images/icons/Orion_royal.png"></div>
     </div>
 </li>
 <li class="level-1">
-    <a class="level-1" href="/core/Access/Controller/UserController.php?act=logout" target="_self">Logout</a>
-    <div class="c7n-icon" onclick="location.href='?link=logout'">
+    <a class="level-1" href="?link=logout&act=logout" target="_self">Logout</a>
+    <div class="c7n-icon" onclick="location.href='?link=user&act=logout'">
         <div class="shadow"><img class="fa" src="/themes/images/icons/Orion_back-arrow.png"></div>
     </div>
 </li>
