--- a/themes/header_public.html
+++ b/themes/header_public.html
@@ -1,12 +1,12 @@
 <li class="level-1">
-    <a class="level-1" href="/core/Access/Controller/UserController.php?act=login" target="_self">Login</a>
-    <div class="c7n-icon" onclick="location.href='?link=login'">
+    <a class="level-1" href="?link=user&act=login" target="_self">Login</a>
+    <div class="c7n-icon" onclick="location.href='?link=user&act=login'">
         <div class="shadow"><img class="fa" src="/themes/images/icons/Orion_back-arrow.png"></div>
     </div>
 </li>
 <li class="level-1">
-    <a class="level-1" href="/core/Access/Controller/UserController.php?act=register" target="_self">Register</a>
-    <div class="c7n-icon" onclick="location.href='?link=register'">
+    <a class="level-1" href="?link=user&act=register" target="_self">Register</a>
+    <div class="c7n-icon" onclick="location.href='?link=user&act=register'">
         <div class="shadow"><img class="fa" src="/themes/images/icons/Orion_add-user.png"></div>
     </div>
 </li>
