--- a/themes/index.html
+++ b/themes/index.html
@@ -31,7 +31,7 @@
             <ul>
                 <li class="level-1">
                     <a class="level-1" href="?link=shoppinglists" target="_self">Shoppinglists</a>
-                    <div class="c7n-icon" onclick="location.href='index.php?link=shoppinglists'">
+                    <div class="c7n-icon" onclick="location.href='?link=shoppinglists'">
                         <div class="shadow"><img class="fa" src="/themes/images/icons/Orion_shopping-basket.png"></div>
                     </div>
                 </li>
@@ -48,14 +48,17 @@
         <h1></h1>
     </div>
 </section>
-<div id="content" class="container">
-    {CONTENT_HTML}
-</div>
+<main>
+    <div id="content" class="container">
+        {CONTENT_HTML}
+    </div>
+</main>
 <footer>
     <div class="container">
 
     </div>
 </footer>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="/themes/js/script.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
