fix(project): programm + style and Home (NO-TKT)

--- a/themes/header_member.html
+++ b/themes/header_member.html
@@ -5,7 +5,7 @@
     </div>
 </li>
 <li class="level-1">
-    <a class="level-1" href="?link=logout&act=logout" target="_self">Logout</a>
+    <a class="level-1" href="?link=user&act=logout" target="_self">Logout</a>
     <div class="c7n-icon" onclick="location.href='?link=user&act=logout'">
         <div class="shadow"><img class="fa" src="/themes/images/icons/Orion_back-arrow.png"></div>
     </div>
