fix(project): programm + style and Home (NO-TKT)

--- a/themes/header_public.html
+++ b/themes/header_public.html
@@ -1,7 +1,7 @@
 <li class="level-1">
     <a class="level-1" href="?link=user&act=login" target="_self">Login</a>
     <div class="c7n-icon" onclick="location.href='?link=user&act=login'">
-        <div class="shadow"><img class="fa" src="/themes/images/icons/Orion_back-arrow.png"></div>
+        <div class="shadow"><img class="fa" src="/themes/images/icons/Orion_unlocked.svg"></div>
     </div>
 </li>
 <li class="level-1">
