fix(project): programm + style and Home (NO-TKT)

--- a/themes/header_member.html
+++ b/themes/header_member.html
@@ -1,7 +1,7 @@
 <li class="level-1">
     <a class="level-1" href="?link=products" target="_self">Products</a>
     <div class="c7n-icon" onclick="location.href='?link=products'">
-        <div class="shadow"><img class="fa" src="/themes/images/icons/Orion_royal.png"></div>
+        <div class="shadow"><img class="fa" src="/themes/images/icons/Orion_coffee-beans.svg"></div>
     </div>
 </li>
 <li class="level-1">
